fixed an issue with overflowing session

--- a/src/components/MySessionsModal/mysessionsmodal.scss
+++ b/src/components/MySessionsModal/mysessionsmodal.scss
@@ -40,6 +40,9 @@
         flex-direction: column;
         gap: 1rem;
         margin-bottom: 1rem;
+        height: fit-content;
+        max-height: 400px;
+        overflow-y: auto;
     }
 
      @include min-width(600px){
